refactor(license-types): replace entity mapping in service with direct response conversion
- Update `getAllLicenseTypes` and `getAllLicenseTypesByFilter` to return `LicenseTypeResponse` directly.
- Introduce `convertToLicenseTypeResponse` utility method for response mapping.
- Remove `ModelMapper` dependency and related mappings from controller and tests.
- Simplify test cases by directly using `LicenseTypeResponse`.